# KursovaLab2

./: CMakeLists.txt  Makefile  SchoolClass.h  SchoolDatabase.h
Файли для лаби/: SchoolClass.cpp  SchoolDatabase.cpp  main.cpp  rules.ninja
